--- a/config.toml
+++ b/config.toml
@@ -7,11 +7,11 @@ paginate = 5
 [Params]
     mainSections = ["post"]
     intro = true
-    headline = "My headline"
-    description = "My description"
-    github = "https://github.com/XXX"
-    twitter = "https://twitter.com/XXX"
-    email = "XXX@example.com"
+    headline = "A Confused Mind"
+    description = "Walk with me through space And time ..."
+    github = "https://github.com/gourabdg47"
+    twitter = "https://twitter.com/Gourabparadox47"
+    email = "gourabdasgupta26994@gmail.com"
     opengraph = true
     shareTwitter = true
     dateFormat = "Mon, Jan 2, 2006"
